# RC.23
 - Blog post and Archive templates, and generators

# RC.22
 - Reinstated the haml views for devise

# RC.21
 - Fixed old usage of f.control_group for f.form_group
 - Fixed devise Login template
 - Fixed the install generator's injection into the devise initializer to use the correct layout

# RC.20
 - Updated post-install instructions about simple_form

# RC.19
 - Stock images for users and landscapes, with associated helpers

# RC.18
 - Fixed issue on install where installer was looking for old PSD folder
 - Blog post Layout

# RC.16 & RC.17
 - Tweaks to listgroups, serverstats and tooltips

# RC.15
 - Added animations to dropdown menus and fixed up Icon backgrounds.
 - Updated the Sidenav templates for the generators"

# RC.14
  - Version bump for small bug fix in helpers

# RC.13
  - Fixed bug where .table-responsive on iOS (iphone 5) was causing the container to be pushed
  to the width of the table, thus blowing out the menus

# RC.12
  - Tweaked the Panel headers to be a bit more colorful

# RC.11
  - Missing landing page stylesheets for Amber and Black

# RC.10
  - Added a small background scrim on the Metrics beneath the Heading
  - Harmonized the colors a bit better
  - Removed the 1px transparent border from Panels
  - Adjusted the font sizing and padding for Panels
  - Removed forced uppercase and bold for panel headers
  - Lightened the metric panel graph color
  - Default the side nave to a light gray color for link text
  - Standardized on ordinary Helvetica for mostly all heades, introduced $font-family-sans-serif-light
  - Navbar dropdown toggle icons light up white properly