@@ -1,10 +1,10 @@
 <article class='blog blog-post mb50'>
   <header class='text-center vertical-center mb50'>
-    <div class='bg cover' style="background-image: url(<%=asset_path(random_landscape_name) %>);"></div>
     <div class='container'>
       <h1>A Night to Remember</h1>
       <h2 class='h4'>How we made $122,000 at Blackjack</h2>
     </div>
+    <div class='bg cover' style="background-image: url(<%=asset_path(random_landscape_name) %>);"></div>
   </header>
   <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 text-muted">
     <aside class='pt30 pl30 small text-center'>
