@@ -1,9 +1,9 @@
 %article.blog.blog-post.mb50
   %header.text-center.vertical-center.mb50
-    .bg.cover{:style => "background-image: url(#{asset_path(random_landscape_name)})"}
     .container
       %h1 A Night to Remember
       %h2.h4 How we made $122,000 at Blackjack
+    .bg.cover{:style => "background-image: url(#{asset_path(random_landscape_name)})"}
   .col-xs-12.col-sm-12.col-md-3.col-lg-3.text-muted
     %aside.pt30.pl30.small.text-center
       %em By John McDowall
