@@ -45,6 +45,10 @@
     }
   }
 
+  aside {
+    padding: 30px 0 0 30px;
+  }
+
   .media {
     position: relative;
   }
@@ -186,6 +190,22 @@ footer {
       font-size: 14px;
       font-size: 1.4rem;
       line-height: 30px;
+    }
+  }
+}
+
+@media (max-width: 375px) {
+  .blog {
+    aside {
+      padding: 0;
+    }
+
+    .social{
+      display: none;
+    }
+
+    .post-footer {
+      border-radius: 0;
     }
   }
 }
