@@ -1,3 +1,6 @@
+# RC.24
+ - Responsive blog refinements
+
 # RC.23
  - Blog post and Archive templates, and generators
 
